<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/idcard" >

    <LinearLayout
        android:id="@+id/part_text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/textViewName"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" 
                android:ellipsize="none"
                android:inputType="textMultiLine"
                android:singleLine="false"/>
        </LinearLayout>

        <!-- 外国人证有英文名和中文名  下面显示是外国人证的中文名    吴冰 2017.8.8 -->

        <LinearLayout
            android:id="@+id/linearLayoutChName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >
            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="" />
            <TextView
                android:id="@+id/textViewIName"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop" >

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/textViewGender"
                style="@style/CardInfoText"
                android:layout_width="40dip"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewNationTitle"
                style="@style/CardInfoTitle"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/nation" />

            <TextView
                android:id="@+id/textViewNation"
                style="@style/CardInfoText"
                android:layout_width="80dip"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop" >

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="60dip"
                android:layout_height="wrap_content"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/textViewYear"
                style="@style/CardInfoText"
                android:layout_width="35dip"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="20dip"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:layout_marginStart="2dip" />

            <TextView
                android:id="@+id/textViewMonth"
                style="@style/CardInfoText"
                android:layout_width="20dip"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="20dip"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:layout_marginStart="2dip" />

            <TextView
                android:id="@+id/textViewDay"
                style="@style/CardInfoText"
                android:layout_width="20dip"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="20dip"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:layout_marginStart="2dip" />
        </LinearLayout>

        <!-- 外国人证没有地址，需要根据情况进行地址的可视化  吴冰 2017.8.8 -->

        <LinearLayout
            android:id="@+id/linearLayoutAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/idcard_marginTop" >

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/textViewAddress"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="36dip"
                android:layout_weight="9" />

            <Space
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop" >

            <TextView
                android:id="@+id/textViewIDNoTitle"
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:text="@string/idno" />

            <TextView
                android:id="@+id/textViewIDNo"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="20dip"
                android:layout_weight="1.0" />
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/next_text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end"
            android:layout_below="@id/part_text_info">
        <LinearLayout
            android:id="@+id/linearLayoutAgency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop">

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="60dip"
                android:layout_height="wrap_content"
                android:text="@string/agency" />

            <TextView
                android:id="@+id/textViewAgency"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="20dip"
                android:layout_weight="1.0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop">

            <TextView
                android:id="@+id/textViewExpireTitle"
                style="@style/CardInfoTitle"
                android:layout_width="60dip"
                android:layout_height="wrap_content"
                android:text="@string/expire" />

            <TextView
                android:id="@+id/textViewExpire"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="20dip"
                android:layout_weight="1.0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop">

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="60dip"
                android:layout_height="wrap_content"
                android:text="@string/ver" />

            <TextView
                android:id="@+id/textViewVer"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="20dip"
                android:layout_weight="1.0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAgencyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop">

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agencyCode" />

            <TextView
                android:id="@+id/textViewAgencyCode"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="20dip"
                android:layout_weight="1.0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/GATPassportNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop"
            android:visibility="gone">

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/passportNum" />

            <TextView
                android:id="@+id/textViewPassportNum"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="20dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/GATIssuanceTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop"
            android:visibility="gone">

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="60dip"
                android:layout_height="wrap_content"
                android:text="@string/issuanceTimes" />

            <TextView
                android:id="@+id/textViewIssuanceTimes"
                style="@style/CardInfoText"
                android:layout_width="wrap_content"
                android:layout_height="20dip" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/old_id_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop">

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:text="@string/old_idno" />

            <TextView
                android:id="@+id/textViewOldIDNo"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="20dip"
                android:layout_weight="1.0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_no_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/idcard_marginTop">

            <TextView
                style="@style/CardInfoTitle"
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:text="@string/card_no" />

            <TextView
                android:id="@+id/textViewCardNo"
                style="@style/CardInfoText"
                android:layout_width="0dip"
                android:layout_height="20dip"
                android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="20dp"
        android:layout_toEndOf="@id/part_text_info"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageViewPortrait"
            android:layout_width="68dip"
            android:layout_height="85dip"
            android:contentDescription="@null"
            android:src="@null"
            android:layout_marginEnd="6dip"
            />

        <ImageView
            android:id="@+id/imageViewFpFlag"
            android:layout_width="29dip"
            android:layout_height="30dip"
            android:layout_marginTop="@dimen/idcard_marginTop"
            android:contentDescription="@null"
            android:src="@null"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>